# py-web-hw13

./: README.md
django/quotes/: migrations.py
django/quotes/quotes/: settings.py
django/quotes/quotes_app/: models.py
django/quotes/quotes_app/templates/quotes_app/: add_quote.html
django/quotes/users/: forms.py  urls.py  views.py
django/quotes/users/templates/users/: password_reset_done.html
fastapi/: pyproject.toml
fastapi/src/conf/: config.py
fastapi/src/repository/: contacts.py  users.py
fastapi/src/routes/: auth.py  contacts.py  users.py
fastapi/src/services/: auth.py
m10_hw/: pyproject.toml
m10_hw/quotes/: manage.py
m10_hw/quotes/quotes/: asgi.py  urls.py  wsgi.py
m10_hw/quotes/quotes_app/: admin.py  connect_db.py  forms.py  urls.py  views.py
m10_hw/quotes/quotes_app/migrations/: 0001_initial.py
m10_hw/quotes/quotes_app/static/quotes/: style.css
m10_hw/quotes/quotes_app/templates/quotes_app/: add_author.html  author.html  base.html  index.html  tags.html
m10_hw/quotes/users/: models.py
m10_hw/quotes/users/migrations/: 0001_initial.py  0002_remove_customuser_first_name_and_more.py  0003_customuser_username.py  0004_alter_customuser_username.py  0005_alter_customuser_username.py
m10_hw/quotes/users/templates/users/: login.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  register.html
restapi/: main.py
restapi/src/database/: db.py
restapi/src/services/: email.py
