[tool.poetry]
name = "m10-hw"
version = "0.1"
description = "-"
authors = ["Your Name <you@example.com>"]
license = "Mit License"
readme = "README.md"
packages = [{include = "m10_hw"}]

[tool.poetry.dependencies]
python = "3.11.4"
django = "^4.2.5"
psycopg2 = "^2.9.7"
pandas = "^2.1.1"
bson = "^0.5.10"
pymongo = "^4.5.0"
mongoengine = "^0.27.0"
django-bootstrap4 = "^23.2"
environ = "^1.0"
django-environ = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
